--- a/AngularJSWorkshop/src/components/contact-list/contact-list.html
+++ b/AngularJSWorkshop/src/components/contact-list/contact-list.html
@@ -3,42 +3,42 @@
 </h1>
 
 <section>
-    <label for="search">Search</label>
-    <input type="text" ng-model="searchTerm" name="search">
+    <label for="searchTerm">Search</label>
+    <input type="text" ng-model="searchTerm" name="searchTerm">
 
     <form name="form" novalidate>
         <p>
             <label for="fieldName">Name</label>
-            <input ng-model="Contract.Name" name="fieldName"
-                   id="fieldName" required>
+            <input ng-model="contactListCtrl.contact.name" name="fieldName"
+                    id="fieldName" required>
             <label for="fieldEmail">Email</label>
-            <input type="email" ng-model="Contract.Email" name="fieldEmail"
-                   id="fieldEmail">
+            <input type="email" ng-model="contactListCtrl.contact.email" name="fieldEmail"
+                    id="fieldEmail">
             <label for="fieldPhone">Phone</label>
-            <input ng-model="Contract.Phone" name="fieldPhone"
-                   id="fieldPhone">
+            <input ng-model="contactListCtrl.contact.phone" name="fieldPhone"
+                    id="fieldPhone">
         </p>
         <p ng-show="form.$submitted">
             <span ng-show="form.fieldName.$error.required">Tell us your Name.</span>
             <span ng-show="form.fieldEmail.$error.email">This is not a valid email.</span>
         </p>
         <p>
-            <button type="submit" ng-disabled="!form.$valid">Submit</button>
+            <button type="submit" ng-disabled="!form.$valid" ng-click="contactListCtrl.add()">Submit</button>
         </p>
     </form>
 
     <p>{{searchTerm}}</p>
 
-    <div ng-if="searchTerm == 'spin'">
+    <div ng-if="searchTerm === 'spin'">
         <div ng-class="searchTerm" style="color:red">I'm red because you entered 'spin'</div>
     </div>
 
     <table>
     <tr><th>Name (Capatalized)</th><th>Email</th><th>Phone</th></tr>
-    <tr ng-repeat="Contact in contactList.ContactList | filter:searchTerm">
-        <td><a ui-sref="app.contactDetail({name:Contact.Name, email:Contact.Email, phone:Contact.Phone})">{{Contact.Name | capatalize}}</a></td>
-        <td>{{Contact.Email}}</td>
-        <td>{{Contact.Phone}}</td>
+    <tr ng-repeat="contact in contactListCtrl.contactList | filter:searchTerm">
+        <td><a ui-sref="app.contactDetail({name:contact.name, email:contact.email, phone:contact.phone})">{{contact.name | capatalize}}</a></td>
+        <td>{{contact.email}}</td>
+        <td>{{contact.phone}}</td>
     </tr>
     </table>
 </section>
