--- a/AngularJSWorkshop/src/components/contact-list/contact-list.html
+++ b/AngularJSWorkshop/src/components/contact-list/contact-list.html
@@ -6,26 +6,7 @@
     <label for="searchTerm">Search</label>
     <input type="text" ng-model="searchTerm" name="searchTerm">
 
-    <form name="form" novalidate>
-        <p>
-            <label for="fieldName">Name</label>
-            <input ng-model="contactListCtrl.contact.name" name="fieldName"
-                    id="fieldName" required>
-            <label for="fieldEmail">Email</label>
-            <input type="email" ng-model="contactListCtrl.contact.email" name="fieldEmail"
-                    id="fieldEmail">
-            <label for="fieldPhone">Phone</label>
-            <input ng-model="contactListCtrl.contact.phone" name="fieldPhone"
-                    id="fieldPhone">
-        </p>
-        <p ng-show="form.$submitted">
-            <span ng-show="form.fieldName.$error.required">Tell us your Name.</span>
-            <span ng-show="form.fieldEmail.$error.email">This is not a valid email.</span>
-        </p>
-        <p>
-            <button type="submit" ng-disabled="!form.$valid" ng-click="contactListCtrl.add()">Submit</button>
-        </p>
-    </form>
+    <contact-form></contact-form>
 
     <p>{{searchTerm}}</p>
 
@@ -34,11 +15,11 @@
     </div>
 
     <table>
-    <tr><th>Name (Capatalized)</th><th>Email</th><th>Phone</th></tr>
-    <tr ng-repeat="contact in contactListCtrl.contactList | filter:searchTerm">
-        <td><a ui-sref="app.contactDetail({name:contact.name, email:contact.email, phone:contact.phone})">{{contact.name | capatalize}}</a></td>
-        <td>{{contact.email}}</td>
-        <td>{{contact.phone}}</td>
-    </tr>
+        <tr><th>Name (Capatalized)</th><th>Email</th><th>Phone</th></tr>
+        <tr ng-repeat="contact in contactListCtrl.contactList | filter:searchTerm">
+            <td><a ui-sref="app.contactDetail({name:contact.name, email:contact.email, phone:contact.phone})">{{contact.name | capatalize}}</a></td>
+            <td>{{contact.email}}</td>
+            <td>{{contact.phone}}</td>
+        </tr>
     </table>
 </section>
