--- a/AngularJSWorkshop/src/components/contact-detail/contact-detail.html
+++ b/AngularJSWorkshop/src/components/contact-detail/contact-detail.html
@@ -3,12 +3,37 @@
 </h1>
 
 <section>
-    <table>
-    <tr><th>Name</th><th>Email</th><th>Phone</th></tr>
-    <tr ng-repeat="contact in contactDetailCtrl.contactList">
-        <td>{{contact.name}}</td>
-        <td>{{contact.email}}</td>
-        <td>{{contact.phone}}</td>
-    </tr>
-    </table>
+    <form name="form" novalidate ng-submit="form.$valid && contactDetailCtrl.update()">
+        <!--<contact-form></contact-form>-->
+
+        <table>
+            <tr>
+                <td><label for="fieldFirstName">Surname</label></td>
+                <td><input ng-model="contactDetailCtrl.contact.first_name" name="fieldFirstName" required></td>
+            </tr>
+            <tr>
+                <td><label for="fieldName">Name</label></td>
+                <td><input ng-model="contactDetailCtrl.contact.last_name" name="fieldName" required></td>
+            </tr>
+            <tr>
+                <td><label for="fieldEmail">Email</label></td>
+                <td><input type="email" ng-model="contactDetailCtrl.contact.email" name="fieldEmail" required></td>
+            </tr>
+            <tr>
+                <td><label for="fieldPhone">Phone</label></td>
+                <td><input ng-model="contactDetailCtrl.contact.phone" name="fieldPhone"></td>
+            </tr>
+        </table>
+
+        <p ng-show="form.$submitted">
+            <span ng-show="form.fieldFirstName.$error.required">Tell us your Name.</span>
+            <span ng-show="form.fieldEmail.$error.email">This is not a valid email.</span>
+        </p>
+
+        <p>
+            <button type="submit">Apply</button>
+            <button type="button" ng-click="contactDetailCtrl.delete()">Delete</button>
+            <span ng-show="contactDetailCtrl.responseMessage">Message: {{contactDetailCtrl.responseMessage}}</span>
+        </p>
+    </form>
 </section>
