--- a/AngularJSWorkshop/src/components/contact-list/contact-form.html
+++ b/AngularJSWorkshop/src/components/contact-list/contact-form.html
@@ -1,17 +1,24 @@
-﻿<form name="addContactForm" novalidate ng-submit="addContactForm.$valid && contactListCtrl.add()">
-    <p>
-        <label for="fieldName">Name</label>
-        <input ng-model="contactListCtrl.contact.name" name="fieldName" id="fieldName" required>
-
-        <label for="fieldEmail">Email</label>
-        <input type="email" ng-model="contactListCtrl.contact.email" name="fieldEmail" id="fieldEmail">
-
-        <label for="fieldPhone">Phone</label>
-        <input ng-model="contactListCtrl.contact.phone" name="fieldPhone" id="fieldPhone">
-    </p>
-    <p ng-show="addContactForm.$submitted">
-        <span ng-show="addContactForm.fieldName.$error.required">Tell us your Name.</span>
-        <span ng-show="addContactForm.fieldEmail.$error.email">This is not a valid email.</span>
-    </p>
-    <p><button type="submit">Submit</button></p>
-</form>
+﻿<table>
+    <tr>
+        <td><label for="fieldFirstName">Surname</label></td>
+        <td><input ng-model="contactListCtrl.contact.first_name" name="fieldFirstName" required></td>
+        <td><span ng-show="form.$submitted && form.fieldFirstName.$error.required">Tell us your Surname.</span></td>
+    </tr>
+    <tr>
+        <td><label for="fieldName">Name</label></td>
+        <td><input ng-model="contactListCtrl.contact.last_name" name="fieldName" required></td>
+        <td><span ng-show="form.$submitted && form.fieldName.$error.required">Tell us your Name.</span></td>
+    </tr>
+    <tr>
+        <td><label for="fieldEmail">Email</label></td>
+        <td><input type="email" ng-model="contactListCtrl.contact.email" name="fieldEmail" required></td>
+        <td>
+            <span ng-show="form.$submitted && form.fieldEmail.$error.required">Tell us your Email.</span>
+            <span ng-show="form.$submitted && form.fieldEmail.$error.email">This is not a valid Email.</span>
+        </td>
+    </tr>
+    <tr>
+        <td><label for="fieldPhone">Phone</label></td>
+        <td><input ng-model="contactListCtrl.contact.phone" name="fieldPhone"></td><td></td>
+    </tr>
+</table>
