--- a/AngularJSWorkshop/src/components/contact-list/contact-list.html
+++ b/AngularJSWorkshop/src/components/contact-list/contact-list.html
@@ -1,26 +1,31 @@
 ﻿<h1>
     My Contactlist
+    <input type="text" ng-model="searchTerm" name="searchTerm">
 </h1>
 
 <section>
-    <label for="searchTerm">Search</label>
-    <input type="text" ng-model="searchTerm" name="searchTerm">
+    <form name="form" novalidate ng-submit="form.$valid && contactListCtrl.add()">
+        <contact-form></contact-form>
+        <p>
+            <button type="submit">Add</button>
+            <button type="reset">Reset</button>
+            <span ng-show="contactListCtrl.responseMessage">Message: {{contactListCtrl.responseMessage}}</span>
+        </p>
+    </form>
 
-    <contact-form></contact-form>
-    <p ng-if="contactListCtrl.errors">{{contactListCtrl.errors}}</p>
+        <p>{{searchTerm}}</p>
 
-    <p>{{searchTerm}}</p>
+        <div ng-if="searchTerm === 'spin'">
+            <div ng-class="searchTerm" style="color:red">I'm red because you entered 'spin'</div>
+        </div>
 
-    <div ng-if="searchTerm === 'spin'">
-        <div ng-class="searchTerm" style="color:red">I'm red because you entered 'spin'</div>
-    </div>
-
-    <table>
-        <tr><th>Name (Capatalized)</th><th>Email</th><th>Phone</th></tr>
-        <tr ng-repeat="contact in contactListCtrl.contactList | filter:searchTerm">
-            <td><a ui-sref="app.contactDetail({name:contact.name})">{{contact.name | capatalize}}</a></td>
-            <td>{{contact.email}}</td>
-            <td>{{contact.phone}}</td>
-        </tr>
-    </table>
+        <table>
+            <tr><th>Firstname (Capatalized)</th><th>Name</th><th>Email</th><th>Phone</th></tr>
+            <tr ng-repeat="contact in contactListCtrl.contactList | filter:searchTerm">
+                <td><a ui-sref="app.contactDetail({id:contact.id})">{{contact.first_name | capatalize}}</a></td>
+                <td>{{contact.last_name}}</td>
+                <td>{{contact.email}}</td>
+                <td>{{contact.phone}}</td>
+            </tr>
+        </table>
 </section>
