--- a/AngularJSWorkshop/src/components/welcome/welcome.html
+++ b/AngularJSWorkshop/src/components/welcome/welcome.html
@@ -2,5 +2,6 @@
 <h1>Hello My Angular</h1>
 
 <p>
+    <a ui-sref="app.userLogin">Go to Login</a>
     <a ui-sref="app.contactList">My Contactlist</a>
 </p>
